fixed letterspacing on small devices

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -31,6 +31,12 @@ body {
 .secondary {
   color: _palette(_katz-secondary) !important;
 }
+.font-title-item {
+  letter-spacing: -1px;
+}
+.font-title {
+  letter-spacing: 0;
+}
 .font-title,
 .font-title-item {
   font-family: Graphik;
@@ -39,7 +45,6 @@ body {
   font-style: normal;
   font-stretch: normal;
   line-height: 1.17;
-  letter-spacing: -1px;
   @include respond-to(md) {
     font-size: 56px;
     line-height: 1.23;
@@ -47,6 +52,7 @@ body {
   }
   color: _palette(_katz-primary);
 }
+
 
 .font-subtitle {
   font-family: Miller-Text;
@@ -185,43 +191,6 @@ li.font-content {
   text-decoration-style: none;
 }
 
-// .footer-menu {
-//   font-family: Miller-TextRoman;
-//   font-size: 14px;
-//   font-weight: normal;
-//   font-style: normal;
-//   font-stretch: normal;
-//   color: _palette(_katz-primary);
-//   line-height: 1.29;
-//   position: absolute;
-//   bottom: 0;
-// }
-
-// .footer-menu-btn {
-//   width: 77px;
-//   height: 25px;
-//   list-style-type: none;
-//   display: inline-block;
-//   // margin: 0 auto;
-//   text-align: center;
-//   border: solid 1px _palette(_katz-primary);
-//   color: _palette(_katz-primary);
-//   margin-bottom: 15px;
-//   padding-top: 2px;
-// }
-// .footer-menu-logo {
-//   margin-bottom: 13px;
-// }
-
-// .footer-menu-btn:hover {
-//   border: solid 1px _palette(_katz-primary);
-// }
-// .footer-menu-text {
-//   font-family: Miller-TextRoman;
-//   font-size: 14px;
-//   line-height: 2.14;
-// }
-
 .carousel {
   background-size: cover;
   background-image: url('../assets/images/carousel-building-01.png');
@@ -286,11 +255,7 @@ li.font-content {
       padding-bottom: 70px;
     }
   }
-  // .font-content {
-  //   line-height: 1.5;
-  //   float: left;
-  //   width: 100%;
-  // }
+
   .font-content-item {
     @extend .font-content;
     margin-bottom: 0;
